# arpy

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  __init__.py  arpy_calculations.ipynb  config.py  group_test.py  pyproject.toml  setup.cfg  setup.py  setup_no_tests.py
algebra/: algebra.py  differental.py  differential.py
arpy/: __init__.py  __main__.py  cli.py  consts.py
arpy/algebra/: ar_types.py  config.py  del_grouping.py  differential.py  multivector.py  operations.py
arpy/algebra/_depricated/: multivector.py
arpy/algebra/data_types/: alpha.py  multivector.py  term.py  xi.py
arpy/algebra/operations/: __init__.py  commutator.py  diamond.py  div.py  full.py  hermitian.py  project.py  rev.py
arpy/parsers/: vector_calculus.py
arpy/reductions/: __init__.py  del_grouping.py  pmatch.py  reducers.py
arpy/tests/: test_ar.py  test_config.py  test_context.py  test_differentials.py  test_multivectors.py  test_operations.py  test_product.py  test_utils.py  utils.py
arpy/utils/: calc_file.py  dispatch.py  lexparse.py  utils.py  visualisation.py
arpy/utils/concepts/: fmap.py  pattern_match.py  (+2 more)
docs/: classes.md  functions.md
examples/: calc1.arp  check_consistency_with_maxwell.py  explicit-functions.arp  explicit-xis.arp
examples/sym/: clifford.py  sympy_support.py
notebooks/: 4Set_differentials.ipynb  Force_equations.ipynb  checking_metrics.ipynb
tests/: test_ar.py  test_differentials.py  test_multivectors.py  test_operations.py  test_product.py  utils.py
visualisations/html/: cayley.html  double-loop.html  graph.html  sphere.html
(+1 files in other folders)
