[tool.poetry]
name = "arpy"
version = "0.3.4"
description = "A library for computing with Absolute Relativity"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-black = "^0.3.8"
pytest-isort = "^0.3.1"
pytest-flake8 = "^1.0.4"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line_length = 100

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Miss"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
